--- a/templates/version/index.html.twig
+++ b/templates/version/index.html.twig
@@ -1,21 +1,22 @@
 {% extends 'base.html.twig' %}
 
-{% block pageTitle %} Archive des sociétés {% endblock %}
+{% block title %}Version index{% endblock %}
+
 {% block body %}
-    {% for flashError in app.flashes('verify_email_error') %}
-        <div class="alert alert-danger" role="alert">{{ flashError }}</div>
-    {% endfor %}
+    <h1>Version index</h1>
+
     <table class="table">
         <thead>
-        <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>SirenNumber</th>
-            <th>CityOfRegistration</th>
-            <th>Registration</th>
-            <th>Capital</th>
-            <th>UpdatedAt</th>
-        </tr>
+            <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>SirenNumber</th>
+                <th>CityOfRegistration</th>
+                <th>Registration</th>
+                <th>Capital</th>
+                <th>UpdatedAt</th>
+                <th>actions</th>
+            </tr>
         </thead>
         <tbody>
         {% for version in versions %}
@@ -27,6 +28,10 @@
                 <td>{{ version.registration ? version.registration|date('Y-m-d') : '' }}</td>
                 <td>{{ version.capital }}</td>
                 <td>{{ version.updatedAt ? version.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
+                <td>
+                    <a href="{{ path('version_show', {'id': version.id}) }}">show</a>
+                    <a href="{{ path('version_edit', {'id': version.id}) }}">edit</a>
+                </td>
             </tr>
         {% else %}
             <tr>
@@ -35,4 +40,6 @@
         {% endfor %}
         </tbody>
     </table>
+
+    <a href="{{ path('version_new') }}">Create new</a>
 {% endblock %}
