--- a/templates/version/show.html.twig
+++ b/templates/version/show.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Version{% endblock %}
+{% block pageTitle %} Archive de la société {{version.name }} {% endblock %}
 
 {% block body %}
-    <h1>Version</h1>
 
     <table class="table">
         <tbody>
@@ -45,10 +45,4 @@
             </tr>
         </tbody>
     </table>
-
-    <a href="{{ path('version_index') }}">back to list</a>
-
-    <a href="{{ path('version_edit', {'id': version.id}) }}">edit</a>
-
-    {{ include('version/_delete_form.html.twig') }}
 {% endblock %}
